feat: comment architecture rework (#174)